# QuartoPy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Quarto.kv  README.md  kivy_config.ini  main.py  pyproject.toml  quarto.kv  requirements.txt
assets/: credits.txt
src/: __init__.py  ai.py  board.py  constants.py  enums.py  keyboard.py  minimax.py  option.py  piece.py  screens.py
