[project]
name = "quartopy"
version = "1.1.0"
description = "An implementation of the Quarto board game in Python using Kivy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kivy[full]",
    "filetype", # Required by kivy but not installed
    "numpy",
]

[tool.ruff]
# Ruff configuration
target-version = "py311"
line-length = 88

[tool.ruff.lint]

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "PL",  # pylint
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RET", # flake8-return
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
]
ignore = [
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "E501",    # Line too long (handled by formatter)
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces around the equals sign in keyword arguments
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
# Sort imports
known-first-party = ["src"]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.bandit]
# Bandit security linter configuration
exclude_dirs = ["tests", "test"]
skips = ["B101"]  # Skip assert_used test

[tool.codespell]
# Codespell configuration
skip = "*.git,*.svg,*.pdf,*.pyc,__pycache__"
check-hidden = true
check-filenames = true
# ignore-words-list = "" # Add words to ignore if needed
